--- a/Turistearg/src/main/resources/templates/error.html
+++ b/Turistearg/src/main/resources/templates/error.html
@@ -4,24 +4,15 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Perfil</title>
-	<link rel="stylesheet" href="https://necolas.github.io/normalize.css/8.0.1/normalize.css">
-	<link rel="preconnect" href="https://fonts.googleapis.com">
-	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.2/dist/css/bootstrap.min.css" rel="stylesheet"
-		integrity="sha384-uWxY/CJNBR+1zjPWmfnSnVxwRheevXITnMqoEIeG1LJrdI0GlVs/9cVSyPYXdcSF" crossorigin="anonymous">
-	<link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Shalimar&display=swap" rel="stylesheet">
-	<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
-	<link rel="stylesheet" href="/css/navbar.css">
-	<title>Document</title>
+	<title>Upss</title>
+	<link rel="stylesheet" href="/css/error.css">
 </head>
 
 <body>
 	<main>
-		<section>
-			<!-- TOOD: mostrar error (objeto completo con propiedades e innner exception) -->
-			<p th:text="${error}"></p>
-		</section>
+		<h1><a th:text="${codigo}" href="/"></a></h1>
+		<p th:text="${errorMsg}"></p>
+		<div class="travolta"></div>
 	</main>
 </body>
 
