--- a/Turistearg/src/main/resources/static/css/publicacion.css
+++ b/Turistearg/src/main/resources/static/css/publicacion.css
@@ -1,54 +1,54 @@
-.tweet {
+.public {
     display: flex;
     border-bottom: 1px solid #e6ecf0;
     margin-bottom: 2px;
     padding: 10px 15px;
   }
   
-  .tweet:hover {
-    background: rgba(0, 0, 0, 0.03);
+  .public:hover {
+    background: rgba(0, 0, 0, 0.1);
     cursor: pointer;
   }
   
-  .tweet a {
+  .public a {
     color: #1b94e0;
     text-decoration: none;
   }
   
-  .tweet a:hover {
+  .public a:hover {
     text-decoration: underline;
   }
   
-  .tweet__author-logo {
+  .public__author-logo {
     width: 49px;
     height: 49px;
     border-radius: 50%;
     margin-right: 10px;
   }
   
-  .tweet__header {
+  .public__header {
     display: flex;
   }
   
-  .tweet__author-name {
+  .public__author-name {
     font-size: 15px;
     font-weight: 700;
     color: #14171a;
     margin-right: 5px;
   }
   
-  .tweet__author-slug {
+  .public__author-slug {
     color: #5b7083;
     font-size: 15px;
   }
   
-  .tweet__publish-time {
+  .public__publish-time {
     margin-left: 5px;
     color: #657786;
   }
   
-  .tweet__image {
+  .public__image {
     width: 100%;
-    border-radius: 15px;
+    border-radius: 10px;
     margin-top: 10px;
   }
