--- a/Turistearg/src/main/resources/templates/login.html
+++ b/Turistearg/src/main/resources/templates/login.html
@@ -21,7 +21,7 @@
 	<main>
 		<section>
 			<div>
-				<h2>LOGIN</h2>
+				<h2>Login</h2>
 			</div>
 		</section>
 		<form action="/logincheck" method="POST" class="formulario" id="formulario">
