--- a/Turistearg/src/main/resources/templates/publicaciones.html
+++ b/Turistearg/src/main/resources/templates/publicaciones.html
@@ -1,47 +1,61 @@
-<!DOCTYPE html >
+<!DOCTYPE html>
 <html lang="es" xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org">
-  <head>
+
+<head>
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.2/dist/css/bootstrap.min.css" rel="stylesheet"
-		integrity="sha384-uWxY/CJNBR+1zjPWmfnSnVxwRheevXITnMqoEIeG1LJrdI0GlVs/9cVSyPYXdcSF" crossorigin="anonymous">
 	<link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Shalimar&display=swap" rel="stylesheet">
-	<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">  
-    <title>Twitter markup</title>
-    <link rel="stylesheet" th:href="@{/css/publicaciones.css}" />
-    <link rel="stylesheet" th:href="@{/css/tweet.css}" />
-    <link rel="stylesheet" th:href="@{/css/navbar.css}">
-  </head>
-  <body>
-  	<div th:if="${}"th:replace="fragmentos/navbar :: navbar-general"></div>
-    <div class="layout">
-    <a th:href="@{/publicacion/categoria/crear(idCategoria=${idCategoria},idUsuario=${session.usuariosession.id})}" th:if="${session.usuariosession != null}">Crear Publicacion</a>
-      <div class="layout__main">
-        <div class="tweet" th:each="publicacion : ${publicaciones}">
-          <img class="tweet__author-logo" th:src="${'/foto/usuario/' + publicacion.usuario.id}" >
-          <div class="tweet__main">
-            <div class="tweet__header">
-              <div class="tweet__author-name" th:text="${publicacion.usuario.nombreDeUsuario}">
-              </div>
-              <div class="tweet__author-slug" th:text="'@' + ${publicacion.usuario.nombreDeUsuario}">
-                  
-              </div>
-              <div class="tweet__publish-time" th:text="${#dates.day(publicacion.fechaPublicacion) + ' ' + #dates.monthNameShort(publicacion.fechaPublicacion)+ ' ' + #dates.year(publicacion.fechaPublicacion)+ ' ' + #dates.hour(publicacion.fechaPublicacion)+ ':' + #dates.minute(publicacion.fechaPublicacion)}">
-              </div>
-            </div>
-            <div class="tweet__content" >
-                <p th:text="${publicacion.descripcion}" ></p>
-                <div>
-                    <img class="tweet__image" th:src="${'/foto/publicacion/' + publicacion.id}" alt="foto publicacion">
-                </div>      
-            </div>
-          </div>
+	<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
+	<title>Publicaciones</title>
+	<link rel="stylesheet" th:href="@{/css/publicaciones.css}"/>
+	<link rel="stylesheet" th:href="@{/css/publicacion.css}" />
+	<link rel="stylesheet" th:href="@{/css/navbar.css}">
+</head>
+
+<body>
+	<div th:if="${}" th:replace="fragmentos/navbar :: navbar-general"></div>
+	<div class="layout">
+		<div class="layout__left-sidebar">
+			<div class="sidebar-menu">
+				<div class="sidebar-menu__item">
+					<a th:href="@{/publicacion/categoria/crear(idCategoria=${idCategoria},idUsuario=${session.usuariosession.id})}" 
+						th:if="${session.usuariosession != null}">
+						<i class="far fa-clone icon"></i>
+						<span>Crear Publicacion</span></a>
+				</div>
+			</div>
+		</div>
+
+		<div class="layout__main">
+			<div class="public" th:each="publicacion : ${publicaciones}">
+				<img class="public__author-logo" th:src="${'/foto/usuario/' + publicacion.usuario.id}">
+				<div class="public__main">
+					<div class="public__header">
+						<div class="public__author-name" th:text="${publicacion.usuario.nombreDeUsuario}">
+						</div>
+						<div class="public__publish-time"
+							th:text="${#dates.day(publicacion.fechaPublicacion) + ' ' + #dates.monthNameShort(publicacion.fechaPublicacion)+ ' ' + #dates.year(publicacion.fechaPublicacion)+ ' ' + #dates.hour(publicacion.fechaPublicacion)+ ':' + #dates.minute(publicacion.fechaPublicacion)}">
+						</div>
+					</div>
+					<div class="public__content">
+						<p th:text="${publicacion.descripcion}"></p>
+						<div>
+							<img class="public__image" th:src="${'/foto/publicacion/' + publicacion.id}"
+								alt="foto publicacion">
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+		      <div class="layout__right-sidebar-container">
+        <div class="layout__right-sidebar">
         </div>
-        
-	
-        
-  </body>
+      </div>
+	</div>
+<script src="https://kit.fontawesome.com/2c36e9b7b1.js" crossorigin="anonymous"></script>
+</body>
+
 </html>
