Autentificacion Del Registro
* Se modifico MainController
se agregaron dos controladores para el envio del mail y la confirmacion.
Se agrego atributo flash para enviar mensaje
* Se modifico UsuarioServicio
Se agrego un metodo para enviar token de autentificacion y se agrego @Async a metodos que envian  mails
* Se modifico index.html , se agrego un mensaje flash
* Se modifico login.html, se agrego un mensaje flash

--- a/Turistearg/src/main/resources/templates/index.html
+++ b/Turistearg/src/main/resources/templates/index.html
@@ -30,6 +30,10 @@
 				<h3 id="lugares">Destinos turisticos</h3>
 			</div>
 			    <p th:if="${error != null}" th:text="${error}"></p>
+                            <div class="alert alert-success alert-dismissible fade show" role="alert"  th:if="${success}">
+                                <strong th:text="${success}" ></strong>
+                                 <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+                             </div>
 			<div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
 				<div class="carousel-indicators">
 					<button type="button" th:each="lugar, iterStat : ${lugares}" data-bs-target="#carouselExampleIndicators" 
