--- a/Turistearg/src/main/resources/templates/resetPassword.html
+++ b/Turistearg/src/main/resources/templates/resetPassword.html
@@ -22,14 +22,14 @@
 	<main>
 		<!-- parrafo si hay un error en el login-->
 		<p th:if="${error != null}" th:text="${error}" style="color:red"></p>
-		<form method="POST" action="/usuario/cambio_contraseña" class="formulario" id="formulario">
+		<form method="POST" action="/usuario/cambio_contrasenia" class="formulario" id="formulario">
 			<input type="hidden" name="tokenDeConfirmacion" th:value="${tokenDeConfirmacion}"></input>
 			<!-- Grupo: Correo Electronico -->
 			<div class="formulario__grupo" id="grupo__correo">
 				<label for="correo" class="formulario__label">Correo Electrónico</label>
 				<div class="formulario__grupo-input">
 					<input type="email" class="formulario__input" name="correo" id="correo"
-						placeholder="correo@correo.com">
+                                               th:value="${correo}" placeholder="correo@correo.com" readonly="readonly">
 					<i class="formulario__validacion-estado fas fa-times-circle"></i>
 				</div>
 				<p class="formulario__input-error">El correo solo puede contener letras, numeros, puntos, guiones y
