--- a/Turistearg/src/main/resources/templates/fragmentos/footer.html
+++ b/Turistearg/src/main/resources/templates/fragmentos/footer.html
@@ -1,72 +1,60 @@
 <!DOCTYPE html>
 <html lang="es" xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org">
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.2/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-uWxY/CJNBR+1zjPWmfnSnVxwRheevXITnMqoEIeG1LJrdI0GlVs/9cVSyPYXdcSF" crossorigin="anonymous">
-    
-    
-    
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.1/font/bootstrap-icons.css">
-    <link rel="stylesheet" href="/Turistearg/src/main/resources/static/css/footer.css">
+	integrity="sha384-uWxY/CJNBR+1zjPWmfnSnVxwRheevXITnMqoEIeG1LJrdI0GlVs/9cVSyPYXdcSF" crossorigin="anonymous">
+
+
+
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.1/font/bootstrap-icons.css">
+<link rel="stylesheet" href="/Turistearg/src/main/resources/static/css/footer.css">
 
 <!-- Site footer -->
 <!-- thymeleaf -->
+
 <body>
-<footer class="site-footer" th:fragment="footer-page">
-    <div class="container">
-        <div class="row">
-            <div class="col-sm-12 col-md-6">
-                <h6>Acerca</h6>
-                <p class="text-justify">Con Turistearg.com <i>NUNCA FUE TAN SIMPLE CONOCER ARGENTINA </i> Lorem
-                    ipsum
-                    dolor sit amet consectetur adipisicing elit. Quam vero molestiae architecto. Molestias hic
-                    corporis
-                    architecto illum molestiae est quibusdam temporibus necessitatibus debitis ipsum! Dolore esse
-                    vel
-                    fuga delectus voluptatum.
-                </p>
-            </div>
+	<footer class="site-footer" th:fragment="footer-page">
+		<div class="container">
+			<div class="row">
+				<div class="col-sm-12 col-md-8">
+					<h6>Acerca</h6>
+					<p class="text-justify">Con Turistearg.com <i>NUNCA FUE TAN SIMPLE CONOCER ARGENTINA </i> Este es un
+						proyecto creado para la gran comunidad de viajeros que eligen nuestro pais como destino para
+						narrar historias, aventuras y mostrarnos los bellos y unicos lugares de cada provincia, region y
+						ciudad Argentina.
 
-            <div class="col-xs-6 col-md-3">
-                <h6>Categorias</h6>
-                <ul class="footer-links">
-                    <li><a href="#">Rosario</a></li>
-                    <li><a href="#">Carlos Paz</a></li>
-                    <li><a href="#">San Rafael</a></li>
-                    <li><a href="#">Salta</a></li>
-                    <li><a href="#">Iguazu</a></li>
-                    <li><a href="#">Bariloche</a></li>
-                </ul>
-            </div>
+					</p>
+				</div>
 
-            <div class="col-xs-6 col-md-3">
-                <h6>Nosotros</h6>
-                <ul class="footer-links">
-                    <li><a href="#">Sobre Nosotros</a></li>
-                    <li><a href="#">Contactanos</a></li>
-                    <li><a href="#">Registrate</a></li>
-                    <li><a href="http://scanfcode.com/privacy-policy/">Politica de Privacidad</a></li>
-                </ul>
-            </div>
-        </div>
-        <hr>
-    </div>
-    <div class="container">
-        <div class="row">
-            <div class="col-md-8 col-sm-6 col-xs-12">
-                <p class="copyright-text">Copyright &copy; 2021 Todos los derechos reservados
-                    <a href="#">Inicio</a>
-                </p>
-            </div>
+				<div class="col-xs-6 col-md-4">
+					<h6>Nosotros</h6>
+					<ul class="footer-links">
+						<li><a href="#">Sobre Nosotros</a></li>
+						<li><a href="#">Contactanos</a></li>
+						<li><a href="#">Registrate</a></li>
+						<li><a href="http://scanfcode.com/privacy-policy/">Politica de Privacidad</a></li>
+					</ul>
+				</div>
+			</div>
+			<hr>
+		</div>
+		<div class="container">
+			<div class="row">
+				<div class="col-md-8 col-sm-6 col-xs-12">
+					<p class="copyright-text">Copyright &copy; 2021 Todos los derechos reservados
+						<a href="#">Inicio</a>
+					</p>
+				</div>
 
-            <div class="col-md-4 col-sm-6 col-xs-12">
-                <ul class="social-icons">
-                    <li><a class="facebook" href="#"><i class="fa fa-facebook"></i></a></li>
-                    <li><a class="instagram" href="#"><i class="fa fa-instagram"></i></a></li>
-                    <li><a class="twitter" href="#"><i class="fa fa-twitter"></i></a></li>
-                </ul>
-            </div>
-        </div>
-    </div>
-</footer>
+				<div class="col-md-4 col-sm-6 col-xs-12">
+					<ul class="social-icons">
+						<li><a class="facebook" href="#"><i class="fa fa-facebook"></i></a></li>
+						<li><a class="instagram" href="#"><i class="fa fa-instagram"></i></a></li>
+						<li><a class="twitter" href="#"><i class="fa fa-twitter"></i></a></li>
+					</ul>
+				</div>
+			</div>
+		</div>
+	</footer>
 </body>
+
 </html>
