--- a/Turistearg/src/main/resources/static/css/perfil.css
+++ b/Turistearg/src/main/resources/static/css/perfil.css
@@ -62,17 +62,15 @@ main{
 }
 .mainCont__grid{
 	display:grid;
-	grid-auto-rows: 18rem;
-	grid-template-columns: repeat(auto-fit, minmax(15rem, 1fr));
+	grid-auto-rows: 32rem;
+	grid-template-columns: repeat(auto-fit, minmax(23rem, 1fr));
 	gap:1rem;
 	height:auto;
 }
 .mainCont_grid div{
-	width:100%;
+	width:50%;
 	cursor:pointer;
 }
-
-
 
 .button_container{
 	position:fixed;
@@ -80,6 +78,7 @@ main{
 	display:flex;
 	justify-content: center;
 	width:100%;
+	padding-left: 26.25rem;
 }
 .boton_crear{
 	 font-size: 19px;
@@ -130,6 +129,7 @@ main{
     border-bottom: 1px solid #000;
     margin-bottom: 2px;
     padding: 10px 15px;
+    width:70%;
   }
   .public__author-name {
     font-size: 15px;
