--- a/Turistearg/src/main/resources/static/css/publicar.css
+++ b/Turistearg/src/main/resources/static/css/publicar.css
@@ -26,11 +26,11 @@ main {
 }
 
 .formulario__input {
-    width: 100%;
+    width: 80%;
     background: #fff;
     border: 3px solid transparent;
     border-radius: 3px;
-    height: 45px;
+    height: 100px;
     line-height: 45px;
     padding: 0 40px 0 10px;
     transition: 0.3s ease all;
@@ -61,6 +61,64 @@ main {
     opacity: 0;
 }
 
+
+
+.formulario__grupo-terminos,
+.formulario__mensaje,
+.formulario__grupo-btn-enviar {
+    grid-column: span 2;
+}
+
+.formulario__mensaje {
+    height: 45px;
+    line-height: 45px;
+    background: #F66060;
+    padding: 0 15px;
+    border-radius: 3px;
+    display: none;
+}
+
+.formulario__mensaje-activo {
+    display: block;
+}
+
+.formulario__mensaje p {
+    margin: 0;
+}
+
+.formulario__grupo-btn-enviar {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin: 10px;
+}
+
+.formulario__btn {
+    height: 45px;
+    line-height: 45px;
+    width: 30%;
+    background: #251134;
+    color: #fff;
+    font-weight: bold;
+    border: none;
+    border-radius: 3px;
+    cursor: pointer;
+    transition: 0.1s ease all;
+}
+
+.formulario__btn:hover {
+    box-shadow: 3px 0 30px rgba(163, 163, 163, 1);
+}
+
+.formulario__mensaje-exito {
+    font-size: 14px;
+    color: #119200;
+    display: none;
+}
+
+.formulario__mensaje-exito-activo {
+    display: block;
+}
 
 .container {
     /* Used to position the input */
@@ -97,98 +155,19 @@ main {
     margin-left:15px;
 }
 
-.formulario__grupo-terminos,
-.formulario__mensaje,
-.formulario__grupo-btn-modificar {
-    grid-column: span 2;
-}
-
-.formulario__mensaje {
-    height: 45px;
-    line-height: 45px;
-    background: #F66060;
-    padding: 0 15px;
-    border-radius: 3px;
-    display: none;
-}
-
-.formulario__mensaje-activo {
-    display: block;
-}
-
-.formulario__mensaje p {
-    margin: 0;
-}
-.formulario__grupo-btn-foto{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    margin: 10px;
-    
-}
-
-.formulario__grupo-btn-modificar {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    margin: 10px;
-    
-}
-.formulario__grupo-btn-eliminar{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    margin: 10px;
-    
-}
-
-.formulario__btn {
-    height: 45px;
-    line-height: 45px;
-    width: 30%;
-    background: #251134;;
-    color: #fff;
-    font-weight: bold;
-    border: none;
-    border-radius: 3px;
-    cursor: pointer;
-    transition: 0.1s ease all;
-}
-
-.formulario__btn:hover {
-    box-shadow: 3px 0 30px rgba(163, 163, 163, 1);
-}
-
-.formulario__btn-foto {
-    height: 45px;
-    line-height: 45px;
-    width: 30%;
-    background: #251134;;
-    color: #fff;
-    font-weight: bold;
-    border: none;
-    border-radius: 3px;
-    cursor: pointer;
-    transition: 0.1s ease all;
-    text-decoration: none;
-   	text-align: center;
-}
-
-.formulario__btn-foto:hover {
-    box-shadow: 3px 0 30px rgba(163, 163, 163, 1);
+.container__icon svg {
+	fill: none; 
+	height: 24px; 
+	stroke: rgba(0, 0, 0, 0.4); 
+	stroke-linecap: round; 
+	stroke-linejoin: round; 
+	stroke-width: 1; 
+	width: 24px; 
+	margin-right:5px;
 }
 
 
 
-.formulario__mensaje-exito {
-    font-size: 14px;
-    color: #119200;
-    display: none;
-}
-
-.formulario__mensaje-exito-activo {
-    display: block;
-}
 
 /* ----- -----  Estilos para Validacion ----- ----- */
 .formulario__grupo-correcto .formulario__validacion-estado {
@@ -218,16 +197,12 @@ main {
 
     .formulario__grupo-terminos,
     .formulario__mensaje,
-    .formulario__grupo-btn-enviar
-    .formulario__grupo-btn-modificar
-    .formulario__grupo-btn-eliminar
-    .formulario__grupo-btn-foto
-     {
+    .formulario__grupo-btn-enviar {
         grid-column: 1;
     }
 
     .formulario__btn {
         width: 100%;
     }
+    
 }
-
