--- a/Turistearg/src/main/resources/templates/crearPublicacionCategoria.html
+++ b/Turistearg/src/main/resources/templates/crearPublicacionCategoria.html
@@ -5,31 +5,65 @@
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<!--<link rel="stylesheet" th:href="@{/css/publicar.css}">-->
+	<link rel="stylesheet" href="https://necolas.github.io/normalize.css/8.0.1/normalize.css">
+	<link rel="preconnect" href="https://fonts.googleapis.com">
+	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.2/dist/css/bootstrap.min.css" rel="stylesheet"
+		integrity="sha384-uWxY/CJNBR+1zjPWmfnSnVxwRheevXITnMqoEIeG1LJrdI0GlVs/9cVSyPYXdcSF" crossorigin="anonymous">
+	<link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Shalimar&display=swap" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
+	<link rel="stylesheet" th:href="@{/css/publicarCat.css}">
+	<link rel="stylesheet" th:href="@{/css/navbar.css}">
 	<title>Document</title>
 </head>
 
 <body>
-	<div class="container">
-		<h2>Publicacion</h2>
-		<form action="/publicacion/publicar" method="POST" enctype="multipart/form-data">
-
-			<input type="hidden" name="idUsuario" th:value="${idUsuario}"></input>
-			<input type="hidden" name="idCategoria" th:value="${idCategoria}"></input>
-
-			<div class="group">
-				<textarea name="descripcion" id="" cols="30" rows="10"></textarea>
+	<div th:replace="fragmentos/navbar :: navbar-general"></div>
+	<section class="encabezado">
+			<h2>Publicacion</h2>
+	</section>
+	<main>
+	<form action="/publicacion/publicar" method="POST" enctype="multipart/form-data">
+		<input type="hidden" name="idUsuario" th:value="${idUsuario}"></input>
+		<input type="hidden" name="idCategoria" th:value="${idCategoria}"></input>
+		<!-- Grupo: Usuario -->
+		<div class="formulario__grupo" id="grupo__usuario">
+			<label for="usuario" class="formulario__label">Descripcion</label>
+			<div class="formulario__grupo-input">
+				<textarea name="descripcion" class="formulario__input" id="" cols="30" rows="10"></textarea>
+				<i class="formulario__validacion-estado fas fa-times-circle"></i>
 			</div>
-			
-			<div class="group">
-				<input type="file" name="foto" required>
-				<span class="highlight"></span>
-				<span class="bar"></span>
+		</div>
+		
+		<!-- Grupo: Foto -->
+		<div class="container">
+			<!-- The real file input -->
+			<input type="file" name="foto" id="foto" class="container__input" />
+
+			<!-- The upload icon -->
+			<div class="container__icon">
+				<svg viewBox="0 0 24 24"
+					style="fill: none; height: 24px; stroke: rgba(0, 0, 0, 0.4); stroke-linecap: round; stroke-linejoin: round; stroke-width: 1; width: 24px; margin-right:5px;">
+					<path d="M18.5,7.5c0.275,0,0.341-0.159,0.146-0.354l-6.292-6.292c-0.195-0.196-0.512-0.196-0.707-0.001
+                                            c0,0-0.001,0.001-0.001,0.001L5.354,7.147C5.154,7.342,5.225,7.501,5.5,7.501h3v10c0,0.552,0.448,1,1,1h5c0.552,0,1-0.448,1-1V7.5
+                                            H18.5z
+                                            M23.5,18.5v4c0,0.552-0.448,1-1,1h-21c-0.552,0-1-0.448-1-1v-4"></path>
+				</svg>
 			</div>
-			
-			<button type="submit">Publicar</button>
-		</form>
-	</div>
+
+			<!-- The label -->
+			<label for="foto" class="formulario__label">Foto De Perfil</label>
+		</div>
+		<div class="formulario__grupo formulario__grupo-btn-enviar">
+			<button type="submit" class="formulario__btn">Enviar</button>
+			<p class="formulario__mensaje-exito" id="formulario__mensaje-exito">Formulario enviado exitosamente!</p>
+		</div>
+	</form>
+	</main>
+	
+	
+	
+	
 </body>
 
 </html>
