--- a/Turistearg/src/main/resources/templates/index.html
+++ b/Turistearg/src/main/resources/templates/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org">
+<html lang="es" xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org">
 
 <head>
 	<meta charset="UTF-8">
@@ -13,8 +13,8 @@
 	<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
 	<link rel="stylesheet" href="css/navbar.css">
 	<link rel="stylesheet" href="css/index2.css">
-        <link rel="stylesheet" href="css/footer.css">
-            
+	<link rel="stylesheet" href="css/footer.css">
+
 	<title>TuristeArg</title>
 </head>
 
@@ -23,7 +23,7 @@
 	<main>
 		<div class="imagen-principal">
 			<div class="contenedor">
-				<h3 class="titulo">ESCOJE TU DESTINO</h3>
+				<h3 class="titulo">ESCOGE TU DESTINO</h3>
 			</div>
 		</div>
 
@@ -31,20 +31,23 @@
 			<div class="contenedor-titulo">
 				<h3 id="lugares">Destinos turisticos</h3>
 			</div>
-			    <p th:if="${error != null}" th:text="${error}"></p>
-                            <div class="alert alert-success alert-dismissible fade show" role="alert"  th:if="${success}">
-                                <strong th:text="${success}" ></strong>
-                                 <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
-                             </div>
+			<p th:if="${error != null}" th:text="${error}"></p>
+			<div class="alert alert-success alert-dismissible fade show" role="alert" th:if="${success}">
+				<strong th:text="${success}"></strong>
+				<button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+			</div>
 			<div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
 				<div class="carousel-indicators">
-					<button type="button" th:each="lugar, iterStat : ${lugares}" data-bs-target="#carouselExampleIndicators" 
-					 th:data-bs-slide-to="${iterStat.index}" th:class="${iterStat.first}? 'active'" aria-current="true"></button>
+					<button type="button" th:each="lugar, iterStat : ${lugares}"
+						data-bs-target="#carouselExampleIndicators" th:data-bs-slide-to="${iterStat.index}"
+						th:class="${iterStat.first}? 'active'" aria-current="true"></button>
 				</div>
 				<div class="carousel-inner">
-					<div class="carousel-item" th:each="lugar, iterStat : ${lugares}" th:classappend="${iterStat.first}? 'active'">
+					<div class="carousel-item" th:each="lugar, iterStat : ${lugares}"
+						th:classappend="${iterStat.first}? 'active'">
 						<a th:href="@{/categorias(idLugar=${lugar.id})}">
-							<img th:src="@{'data:image/jpeg;base64,'+${lugar.foto.getContenidoBase64()}}" class="d-block w-50">
+							<img th:src="@{'data:image/jpeg;base64,'+${lugar.foto.getContenidoBase64()}}"
+								class="d-block w-50">
 						</a>
 					</div>
 				</div>
@@ -61,7 +64,7 @@
 			</div>
 		</div>
 	</main>
-        <div th:replace="fragmentos/footer :: footer-page"></div>
+	<div th:replace="fragmentos/footer :: footer-page"></div>
 
 	<script src="https://kit.fontawesome.com/2c36e9b7b1.js" crossorigin="anonymous"></script>
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
