--- a/Turistearg/src/main/resources/templates/login.html
+++ b/Turistearg/src/main/resources/templates/login.html
@@ -24,10 +24,14 @@
 				<h2>Login</h2>
 			</div>
 		</section>
-                <div class="alert alert-success alert-dismissible fade show" role="alert"  th:if="${success}">
-                                <strong th:text="${success}" ></strong>
-                                 <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
-                 </div>
+		<div class="alert alert-success alert-dismissible fade show" role="alert" th:if="${success}">
+			<strong th:text="${success}"></strong>
+			<button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+		</div>
+		<div class="alert alert-danger alert-dismissible fade show" role="alert" th:if="${error}">
+			<strong th:text="${error}"></strong>
+			<button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+		</div>
 		<form action="/logincheck" method="POST" class="formulario" id="formulario">
 			<!-- Grupo: Correo Electronico -->
 			<div class="formulario__grupo" id="grupo__correo">
@@ -50,17 +54,17 @@
 			<div class="recupass_link">
 				<a href="/usuario/recuperar-contrasenia">Olvide mi contraseña</a>
 			</div>
-			
+
 			<div class="botones_form">
-			<button type="submit" class="formulario__btn-enviar formulario__btn">INGRESAR</button>
-			<button href="/registro" class="formulario__btn">Registrarte</button>
+				<button type="submit" class="formulario__btn-enviar formulario__btn">INGRESAR</button>
+				<button href="/registro" class="formulario__btn">Registrarte</button>
 			</div>
 		</form>
-		
+
 	</main>
-        
+
 	<script src="https://kit.fontawesome.com/2c36e9b7b1.js" crossorigin="anonymous"></script>
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
 		integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
 		crossorigin="anonymous"></script>
 </body>
