--- a/Turistearg/src/main/resources/templates/perfil.html
+++ b/Turistearg/src/main/resources/templates/perfil.html
@@ -27,8 +27,12 @@
 			<div class="contenedor-cabecera">
 				<div class="cabecera1">
 					<h1 th:text="${session.usuariosession.nombreDeUsuario}"></h1>
-					<a class="button" href="/editar-perfil">Editar
+					<a class="button" th:href="@{/usuario/editar-perfil(id=${session.usuariosession.id})}">Editar
 						Perfil</a>
+				</div>
+				<div class="alert alert-success alert-dismissible fade show" role="alert" th:if="${success}">
+					<strong th:text="${success}"></strong>
+					<button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
 				</div>
 			</div>
 		</div>
@@ -52,6 +56,7 @@
 							<p th:text="${publicacion.descripcion}"></p>
 							<img class="public__image" th:src="${'/foto/publicacion/' + publicacion.id}"
 								alt="foto publicacion">
+							<a href="">Editar</a>
 						</div>
 					</div>
 				</div>
@@ -67,6 +72,9 @@
 		<div class="footer"></div>
 	</div>
 	<script src="https://kit.fontawesome.com/b7fddb7853.js" crossorigin="anonymous"></script>
+	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+		integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+		crossorigin="anonymous"></script>
 </body>
 
 </html>
