--- a/Turistearg/src/main/resources/templates/recupass.html
+++ b/Turistearg/src/main/resources/templates/recupass.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang=lang="en" xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org">
+<html lang=lang="es" xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org">
 
 <head>
   <meta charset="UTF-8">
